--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/express-handlebars": "^6.0.0",
     "@types/node": "^17.0.5",
     "eslint": "^8.5.0",
     "eslint-plugin-import": "^2.25.3",
@@ -35,6 +36,7 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "path": "^0.12.7"
   }
 }
